# OpenNetMap

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_manual_mapping_metadata.py  0003_device_network_link_role.py  0004_network_kinds_and_anchors.py
apps/api/app/: main.py
apps/api/app/api/: error_handlers.py
apps/api/app/api/routes/: devices.py  health.py  hosts.py  maps.py  networks.py  scan_jobs.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: session.py  types.py
apps/api/app/models/: __init__.py  device.py  device_network_link.py  enums.py  host.py  map.py  network.py  scan_job.py
apps/api/app/schemas/: common.py  device.py  graph.py  host.py  map.py  network.py  scan_job.py
apps/api/app/services/: device_service.py  graph_service.py  host_service.py  map_service.py  network_service.py  nmap_parser.py  nmap_runner.py  scan_job_service.py  validators.py
apps/api/app/workers/: job_loop.py  main.py
apps/api/openetmap_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_api_flows.py
apps/api/tests/unit/: test_nmap_parser.py  test_nmap_runner.py  test_validators.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: main.tsx
apps/web/src/api/: client.ts  devices.ts  hosts.ts  maps.ts  networks.ts  scanJobs.ts
apps/web/src/app/: router.tsx  theme.ts
apps/web/src/pages/: MapEditorPage.tsx  (+1 more)
(+30 files in other folders)
